# teselado

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  pages.yml
data/: schema.yaml
data/sample/: metadata.json  orders.parquet  restaurants.parquet
docs/: architecture.md
docs/demo/: report.json  zones.geojson
docs/images/: README.md
notebooks/: zone_analysis.ipynb
scripts/: generate_portfolio_assets.py
src/teselado/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/teselado/clustering/: __init__.py  ambiguity.py  factory.py  fuzzy.py  fuzzy_kmeans.py  kmeans.py  selector.py
src/teselado/geo/: __init__.py  bounds.py
src/teselado/ingest/: __init__.py  loaders.py  osm.py  schema.py  synthetic.py
src/teselado/simulation/: __init__.py  agents.py  assigner.py  compare.py  distance.py  engine.py  geo.py  inputs.py  metrics.py  mip_assigner.py
src/teselado/tessellation/: __init__.py  zones.py
src/teselado/viz/: __init__.py  dashboard.py  export.py  map.py  render.py  static.py
tests/: test_clustering.py  test_compare_methods.py  test_distance_compare.py  test_fuzzy_clustering.py  test_imports.py  test_ingest.py  test_mip_assigner.py  test_osm.py  test_pipeline.py  test_simulation.py  test_static_viz.py  test_tessellation.py  test_viz.py
